--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -251,4 +251,27 @@
     <style name="Text.Big.Bold.White" parent="Text.Big.Bold">
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <!-- Rating Style -->
+
+    <style name="RatingBar" parent="Widget.AppCompat.RatingBar">
+        <item name="colorControlNormal">@color/grey</item>
+        <item name="colorControlActivated">@color/golden.secondary</item>
+        <item name="android:numStars">5</item>
+        <item name="android:stepSize">1</item>
+    </style>
+
+    <style name="RatingBarIndicator" parent="Widget.AppCompat.RatingBar.Indicator">
+        <item name="colorControlNormal">@color/grey</item>
+        <item name="colorControlActivated">@color/golden.secondary</item>
+        <item name="android:numStars">5</item>
+        <item name="android:stepSize">1</item>
+    </style>
+
+    <style name="RatingBarSmall" parent="Widget.AppCompat.RatingBar.Small">
+        <item name="colorControlNormal">@color/grey</item>
+        <item name="colorControlActivated">@color/golden.secondary</item>
+        <item name="android:numStars">5</item>
+        <item name="android:stepSize">1</item>
+    </style>
 </resources>
