--- a/app/src/main/res/layout/bottom_sheet_filter.xml
+++ b/app/src/main/res/layout/bottom_sheet_filter.xml
@@ -30,6 +30,7 @@
         android:orientation="vertical"
         android:background="@color/white">
 
+        <include android:id="@+id/sort_filter_fragment" layout="@layout/sort_filter_fragment" android:visibility="gone"/>
         <include android:id="@+id/filter_fragment" layout="@layout/filter_fragment" android:visibility="gone"/>
 
         <androidx.recyclerview.widget.RecyclerView
