--- a/app/src/main/res/layout/product_detail_fragment.xml
+++ b/app/src/main/res/layout/product_detail_fragment.xml
@@ -88,139 +88,165 @@
     </ViewFlipper>
 
     -->
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_product"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/tour_backpacker_mandalika"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_action_bar">
 
-        android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_action_bar"
-        app:layout_constraintBottom_toTopOf="@+id/tv_product_promo"/>
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="vertical">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/tv_product_promo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/promo"
-        android:textColor="@color/white"
-        style="@style/Text.Medium.Bold"
-        android:background="@color/red"
-        android:paddingStart="@dimen/_15sdp"
-        android:paddingEnd="@dimen/_15sdp"
-        android:paddingTop="@dimen/_5sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/iv_product"
-        app:layout_constraintStart_toStartOf="parent"/>
+                >
 
-    <TextView
-        android:id="@+id/tv_detail_category_product"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/promo"
-        android:textColor="@color/gray.primary"
-        style="@style/Text.Medium.Bold"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_product"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tour_backpacker_mandalika"
+
+                    android:scaleType="fitXY"
+                    app:layout_constraintTop_toTopOf="parent"/>
 
 
-        app:layout_constraintTop_toTopOf="@+id/tv_product_promo"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_product_promo"
-        app:layout_constraintStart_toEndOf="@+id/tv_product_promo"
-        android:layout_marginStart="@dimen/_10sdp"/>
+                <TextView
+                    android:id="@+id/tv_product_promo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    android:textColor="@color/white"
+                    style="@style/Text.Medium.Bold"
+                    android:background="@color/red"
+                    android:paddingStart="@dimen/_15sdp"
+                    android:paddingEnd="@dimen/_15sdp"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_product"
+                    app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
-        android:id="@+id/tv_detail_product"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/promo"
-        style="@style/Text.Medium.Bold"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_product_promo"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_detail_product_location"
-        style="@style/Text.Small.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Location"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product"
-        app:layout_constraintStart_toStartOf="parent"
-        app:drawableStartCompat="@drawable/ic_map" />
-
-    <TextView
-        android:id="@+id/tv_detail_product_rating"
-        style="@style/Text.Small.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="4.6"
-        android:textColor="@color/star_color"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
-        app:layout_constraintStart_toStartOf="parent"
-        app:drawableStartCompat="@drawable/ic_rating_star" />
-
-    <TextView
-        android:id="@+id/tv_detail_product_reviews"
-        style="@style/Text.Small.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gray.primary_dark"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
-        app:layout_constraintStart_toEndOf="@+id/tv_detail_product_rating" />
-
-    <TextView
-        android:id="@+id/tv_detail_product_favorit"
-        style="@style/Text.Small.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:background="@drawable/ic_favorite"
-        android:textColor="@color/gray.primary_dark"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/description"
-        style="@style/Text.Large"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_rating"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
-        android:id="@+id/tv_detail_product_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/promo"
-        style="@style/Text.Medium"
-
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_10sdp"
-        android:layout_marginEnd="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_description"
-        app:layout_constraintStart_toStartOf="parent"/>
+                <TextView
+                    android:id="@+id/tv_detail_category_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    android:textColor="@color/gray.primary"
+                    style="@style/Text.Medium.Bold"
 
 
+                    app:layout_constraintTop_toTopOf="@+id/tv_product_promo"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_product_promo"
+                    app:layout_constraintStart_toEndOf="@+id/tv_product_promo"
+                    android:layout_marginStart="@dimen/_10sdp"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    style="@style/Text.Medium.Bold"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_product_promo"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_product_location"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:drawableStartCompat="@drawable/ic_map" />
+
+                <TextView
+                    android:id="@+id/tv_detail_product_rating"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4.6"
+                    android:textColor="@color/star_color"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:drawableStartCompat="@drawable/ic_rating_star" />
+
+                <TextView
+                    android:id="@+id/tv_detail_product_reviews"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray.primary_dark"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
+                    app:layout_constraintStart_toEndOf="@+id/tv_detail_product_rating" />
+
+                <TextView
+                    android:id="@+id/tv_detail_product_favorit"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/ic_favorite"
+                    android:textColor="@color/gray.primary_dark"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/description"
+                    style="@style/Text.Large"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_rating"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_product_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    style="@style/Text.Medium"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_description"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <ExpandableListView
+                    android:id="@+id/elv_product_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@android:color/background_light"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
