--- a/app/src/main/res/layout/product_detail_fragment.xml
+++ b/app/src/main/res/layout/product_detail_fragment.xml
@@ -88,22 +88,21 @@
     </ViewFlipper>
 
     -->
+
     <ScrollView
+        android:id="@+id/sv_product_detail_scroll_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_action_bar">
+        android:fillViewport="true"
+        android:paddingBottom="@dimen/_10sdp"
+        app:layout_constraintTop_toBottomOf="@+id/search_action_bar"
+      >
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                >
+                android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/iv_product"
@@ -138,7 +137,6 @@
                     android:text="@string/promo"
                     android:textColor="@color/gray.primary"
                     style="@style/Text.Medium.Bold"
-
 
                     app:layout_constraintTop_toTopOf="@+id/tv_product_promo"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_product_promo"
@@ -235,18 +233,16 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_description"
                     app:layout_constraintStart_toStartOf="parent"/>
 
+
                 <ExpandableListView
                     android:id="@+id/elv_product_detail"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="@dimen/_400sdp"
+                    android:scrollbars="none"
                     android:background="@android:color/background_light"
                     app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
-
+                    />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
