--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -80,6 +80,9 @@
         <action
             android:id="@+id/action_homeCustomerFragment_to_productFragment"
             app:destination="@id/productFragment" />
+        <action
+            android:id="@+id/action_homeCustomerFragment_to_productFragment2"
+            app:destination="@id/productFragment" />
     </fragment>
     <fragment
         android:id="@+id/bookingFragment"
@@ -182,7 +185,12 @@
             app:destination="@id/accountFragment" />
         <action
             android:id="@+id/action_productFragment_to_productDetailFragment"
-            app:destination="@id/productDetailFragment" />
+            app:destination="@id/productDetailFragment"/>
+
+        <argument
+            android:name="categoryProductID"
+            app:argType="integer"
+            android:defaultValue="0" />
 
     </fragment>
 </navigation>
