--- a/app/src/main/res/layout/filter_fragment.xml
+++ b/app/src/main/res/layout/filter_fragment.xml
@@ -75,10 +75,14 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <SeekBar
+        <com.google.android.material.slider.RangeSlider
             android:id="@+id/sb_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:valueFrom="0"
+            android:valueTo="10000000"
+            android:stepSize="1000000"
+            app:values="@array/initial_range_slider_values"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintTop_toBottomOf="@+id/tl_price_max" />
 
