--- a/app/src/main/res/layout/bottom_sheet_advance_filter.xml
+++ b/app/src/main/res/layout/bottom_sheet_advance_filter.xml
@@ -30,7 +30,8 @@
         android:orientation="vertical"
         android:background="@color/white">
 
-      <include layout="@layout/filter_fragment" />
+        <include android:id="@+id/ly_filter_fragment" layout="@layout/filter_fragment" />
+        <include android:id="@+id/ly_sort_fragment" layout="@layout/sort_item"/>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_apply_filter"
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/_8sdp"
             android:layout_marginVertical="@dimen/_8sdp"
-            android:text="Apply" />
+            android:text="@string/apply" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.appcompat.widget.LinearLayoutCompat>
