--- a/app/src/main/res/layout/layout_skeleton_product_detail_description.xml
+++ b/app/src/main/res/layout/layout_skeleton_product_detail_description.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <include android:id="@+id/ly_item_banner" layout="@layout/layout_skeleton_item_banner"/>
     <TextView
         android:id="@+id/tv_product_promo"
         android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ly_item_banner"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
@@ -133,4 +134,6 @@
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/tv_description"
         app:layout_constraintStart_toStartOf="parent"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
