--- a/app/src/main/res/layout/product_detail_fragment_real.xml
+++ b/app/src/main/res/layout/product_detail_fragment_real.xml
@@ -66,39 +66,6 @@
         </com.google.android.material.appbar.MaterialToolbar>
 
         <ViewFlipper
-            android:id="@+id/vf_banner"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <include layout="@layout/layout_skeleton_item_banner" />
-            </com.facebook.shimmer.ShimmerFrameLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_200sdp">
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/vp_banner"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
-
-                <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tl_banner"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentBottom="true"
-                    android:background="@color/transparent"
-                    app:tabBackground="@drawable/tab_pager_selector"
-                    app:tabIndicator="@color/transparent" />
-            </RelativeLayout>
-        </ViewFlipper>
-
-        <ViewFlipper
             android:id="@+id/vf_product_detail_desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -111,16 +78,171 @@
 
             </com.facebook.shimmer.ShimmerFrameLayout>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_product_detail_desc"
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_8sdp"
-                android:layout_marginEnd="@dimen/_8sdp"
+                app:layout_constraintTop_toBottomOf="@+id/search_action_bar"
+                >
 
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/iv_product"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/tour_backpacker_mandalika"
 
-                tools:listitem="@layout/item_product_detail_desc"/>
+                    android:scaleType="fitXY"
+                    app:layout_constraintTop_toTopOf="parent"/>
+
+
+                <TextView
+                    android:id="@+id/tv_product_promo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    android:textColor="@color/white"
+                    style="@style/Text.Medium.Bold"
+                    android:background="@color/red"
+                    android:paddingStart="@dimen/_15sdp"
+                    android:paddingEnd="@dimen/_15sdp"
+                    android:paddingTop="@dimen/_5sdp"
+                    android:paddingBottom="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/iv_product"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_category_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    android:textColor="@color/gray.primary"
+                    style="@style/Text.Medium.Bold"
+
+
+                    app:layout_constraintTop_toTopOf="@+id/tv_product_promo"
+                    app:layout_constraintBottom_toBottomOf="@+id/tv_product_promo"
+                    app:layout_constraintStart_toEndOf="@+id/tv_product_promo"
+                    android:layout_marginStart="@dimen/_10sdp"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_product"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    style="@style/Text.Medium.Bold"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_product_promo"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_product_location"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Location"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:drawableStartCompat="@drawable/ic_map" />
+
+                <TextView
+                    android:id="@+id/tv_detail_product_rating"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="4.6"
+                    android:textColor="@color/star_color"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:drawableStartCompat="@drawable/ic_rating_star" />
+
+                <TextView
+                    android:id="@+id/tv_detail_product_reviews"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/gray.primary_dark"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
+                    app:layout_constraintStart_toEndOf="@+id/tv_detail_product_rating" />
+
+                <TextView
+                    android:id="@+id/tv_detail_product_favorit"
+                    style="@style/Text.Small.Medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:background="@drawable/ic_favorite"
+                    android:textColor="@color/gray.primary_dark"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <TextView
+                    android:id="@+id/tv_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/description"
+                    style="@style/Text.Large"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_rating"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <TextView
+                    android:id="@+id/tv_detail_product_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/promo"
+                    style="@style/Text.Medium"
+
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginStart="@dimen/_10sdp"
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_description"
+                    app:layout_constraintStart_toStartOf="parent"/>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_product_detail_expandable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_8sdp"
+                    android:layout_marginEnd="@dimen/_8sdp"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="1"
+                    tools:itemCount="5"
+                    tools:listitem="@layout/item_detail_product_expand"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ViewFlipper>
+
+
+        <ViewFlipper
+            android:id="@+id/vf_product_expandable_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <include layout="@layout/layout_skeleton_detail_product_expand"/>
+
+        </com.facebook.shimmer.ShimmerFrameLayout>
 
 
         </ViewFlipper>
@@ -134,6 +256,7 @@
             android:paddingEnd="@dimen/_10sdp">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/final_price"
