--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="disc_color">#F04461</color>
 
     <color name="star_color">#EC8423</color>
+
+    <color name="orange">#FF6140</color>
 </resources>
