--- a/app/src/main/res/layout/layout_skeleton_product_detail_description.xml
+++ b/app/src/main/res/layout/layout_skeleton_product_detail_description.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
-    <include android:id="@+id/ly_item_banner" layout="@layout/layout_skeleton_item_banner"/>
     <TextView
         android:id="@+id/tv_product_promo"
         android:layout_width="wrap_content"
@@ -20,7 +17,7 @@
         android:paddingTop="@dimen/_5sdp"
         android:paddingBottom="@dimen/_5sdp"
         android:layout_marginTop="@dimen/_10sdp"
-        app:layout_constraintTop_toBottomOf="@+id/ly_item_banner"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
@@ -63,8 +60,7 @@
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginStart="@dimen/_10sdp"
         app:layout_constraintTop_toBottomOf="@+id/tv_detail_product"
-        app:layout_constraintStart_toStartOf="parent"
-        app:drawableStartCompat="@drawable/ic_map" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_detail_product_rating"
