--- a/app/src/main/res/layout/product_detail_fragment_real.xml
+++ b/app/src/main/res/layout/product_detail_fragment_real.xml
@@ -8,23 +8,50 @@
     android:fitsSystemWindows="true"
     tools:context=".presentation.fragments.product.ProductDetailFragment">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        >
-
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:fitsSystemWindows="true"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/search_action_bar"
+            app:layout_constraintBottom_toTopOf="@+id/ll_pesan_sekarang">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <ViewFlipper
+                    android:id="@+id/vf_banner"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <com.facebook.shimmer.ShimmerFrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <include layout="@layout/layout_skeleton_item_banner" />
+                    </com.facebook.shimmer.ShimmerFrameLayout>
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/_200sdp">
+
+                        <androidx.viewpager2.widget.ViewPager2
+                            android:id="@+id/vp_banner"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent" />
+
+                        <com.google.android.material.tabs.TabLayout
+                            android:id="@+id/tl_banner"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentBottom="true"
+                            android:background="@color/transparent"
+                            app:tabBackground="@drawable/tab_pager_selector"
+                            app:tabIndicator="@color/transparent" />
+                    </RelativeLayout>
+                </ViewFlipper>
 
                 <ViewFlipper
                     android:id="@+id/vf_product_detail_desc"
@@ -39,21 +66,26 @@
 
                     </com.facebook.shimmer.ShimmerFrameLayout>
 
+                    <include android:id="@+id/item_product_detail_description" layout="@layout/item_product_detail_desc"/>
+                </ViewFlipper>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rv_product_detail_expandable"
+                <ViewFlipper
+                    android:id="@+id/vf_product_detail_expandable"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.facebook.shimmer.ShimmerFrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/_8sdp"
-                        android:layout_marginEnd="@dimen/_8sdp"
-                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                        app:spanCount="1"
-                        tools:itemCount="5"
-                        tools:listitem="@layout/item_detail_product_expand"
-                        app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"/>
+                        android:layout_height="wrap_content">
 
+                        <include layout="@layout/layout_skeleton_detail_product_expand"/>
+
+                    </com.facebook.shimmer.ShimmerFrameLayout>
+
+                    <include android:id="@+id/ll_detail_product_expand" layout="@layout/item_detail_product_expand" />
 
                 </ViewFlipper>
+
 
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.core.widget.NestedScrollView>
@@ -113,6 +145,7 @@
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/ll_pesan_sekarang"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -120,7 +153,9 @@
         android:paddingStart="@dimen/_10sdp"
         android:paddingEnd="@dimen/_10sdp"
         android:layout_gravity="bottom"
-        android:background="@color/white">
+        android:background="@color/white"
+
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_price"
@@ -149,7 +184,6 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
