--- a/app/src/main/res/layout/layout_product_detail_schedules.xml
+++ b/app/src/main/res/layout/layout_product_detail_schedules.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:paddingStart="@dimen/_10sdp"
+    android:paddingEnd="@dimen/_10sdp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_schedules_hari_ke_title"
