--- a/app/src/main/res/layout/item_detail_product_expand.xml
+++ b/app/src/main/res/layout/item_detail_product_expand.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginTop="@dimen/_2sdp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -13,7 +14,9 @@
             android:id="@+id/ll_tanggal_pelaksanaan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_expandable_tanggal_pelaksanaan"
@@ -89,13 +92,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:layout_marginTop="@dimen/_2sdp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_rencana_perjalanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_expandable_rencana_perjalanan"
@@ -134,8 +139,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_5sdp">
+                android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:id="@+id/ll_expanded_rencana_perjalanan"
@@ -165,15 +169,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:layout_marginTop="@dimen/_2sdp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_include"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-
-            android:layout_marginTop="@dimen/_2sdp">
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_expandable_include"
@@ -236,15 +240,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:layout_marginTop="@dimen/_2sdp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_exclude"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-
-            android:layout_marginTop="@dimen/_2sdp">
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_expandable_exclude"
@@ -315,13 +319,15 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:layout_marginTop="@dimen/_2sdp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_fasilitas_layanan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/ll_expandable_fasilitas_layanan"
@@ -386,14 +392,16 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:layout_marginTop="@dimen/_2sdp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_faq"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:elevation="@dimen/_10sdp">
+            android:elevation="@dimen/_10sdp"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_expandable_faq"
@@ -464,7 +472,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:elevation="@dimen/_10sdp">
+            android:elevation="@dimen/_10sdp"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_expandable_syarat_ketentuan"
@@ -532,14 +542,16 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp">
+        android:layout_marginTop="@dimen/_2sdp">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/ll_penilaian_produk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:elevation="@dimen/_10sdp">
+            android:elevation="@dimen/_10sdp"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_expandable_penilaian_produk"
@@ -609,7 +621,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:elevation="@dimen/_10sdp">
+            android:elevation="@dimen/_10sdp"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingEnd="@dimen/_10sdp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/ll_expandable_paket_lainnya"
