--- a/app/src/main/res/layout/product_detail_fragment_real.xml
+++ b/app/src/main/res/layout/product_detail_fragment_real.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/thin_gray"
     tools:context=".presentation.fragments.product.ProductDetailFragment">
 
         <androidx.core.widget.NestedScrollView
@@ -66,7 +67,7 @@
 
                     </com.facebook.shimmer.ShimmerFrameLayout>
 
-                    <include android:id="@+id/item_product_detail_description" layout="@layout/item_product_detail_desc"/>
+                    <include android:id="@+id/ll_item_product_detail_description" layout="@layout/layout_item_product_detail_desc"/>
                 </ViewFlipper>
 
                 <ViewFlipper
