--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -62,6 +62,58 @@
         <item name="strokeWidth">@dimen/_1sdp</item>
     </style>
 
+    <!--    Style For AppCompatButton    -->
+    <style name="AppCompatButton.Filled.Blue.Rounded" parent="Widget.AppCompat.Button">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/blue_0063a7</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="AppCompatButton.Filled.Yellow.Rounded" parent="Widget.AppCompat.Button">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/yellow_ffa216</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="AppCompatButton.Stroke.Blue.Rounded" parent="Widget.AppCompat.Button">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/blue_0063a7</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="strokeColor">@color/blue_0063a7</item>
+        <item name="strokeWidth">@dimen/_1sdp</item>
+    </style>
+
+    <!--    Style For ImageButton    -->
+    <style name="ImageButton.Filled.Blue.Rounded" parent="Widget.AppCompat.ImageButton">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/blue_0063a7</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="ImageButton.Filled.Yellow.Rounded" parent="Widget.AppCompat.ImageButton">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/yellow_ffa216</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="ImageButton.Stroke.Blue.Rounded" parent="Widget.AppCompat.ImageButton">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="android:textColor">@color/blue_0063a7</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="strokeColor">@color/blue_0063a7</item>
+        <item name="strokeWidth">@dimen/_1sdp</item>
+    </style>
+
     <!--    Style For Input -->
     <style name="EditText" parent="Text.Medium.Light">
         <item name="android:textColorHint">@color/black</item>
