--- a/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
+++ b/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
@@ -39,7 +39,18 @@
                 app:layout_constraintBottom_toBottomOf="@+id/rb_total_rating_review"
                 app:layout_constraintStart_toEndOf="@+id/rb_total_rating_review"/>
 
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="5"
+                android:visibility="gone"
+                tools:listitem="@layout/item_choose_star"
+                app:layout_constraintTop_toBottomOf="@id/rb_total_rating_review"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
 
@@ -65,7 +76,7 @@
             android:paddingBottom="@dimen/_5sdp">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_lihat_semuany"
+                android:id="@+id/tv_lihat_semuanya"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/lihat_semua"
