--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -88,6 +88,16 @@
         <item name="strokeWidth">@dimen/_1sdp</item>
     </style>
 
+    <!--    Style For AppCompatButton    -->
+
+    <style name="AppCompatButton.Filled.gray.Rounded" parent="Widget.AppCompat.Button">
+        <item name="cornerRadius">@dimen/_20sdp</item>
+        <item name="backgroundTint">@color/gray_bd</item>
+        <item name="android:padding">@dimen/_10sdp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
     <!--    Style For ImageButton    -->
     <style name="ImageButton.Filled.Blue.Rounded" parent="Widget.AppCompat.ImageButton">
         <item name="cornerRadius">@dimen/_20sdp</item>
