--- a/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
+++ b/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
@@ -51,16 +51,17 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_choose_star"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:itemCount="5"
-                app:layout_constraintHorizontal_weight="5"
                 tools:listitem="@layout/item_choose_star"
                 app:layout_constraintTop_toBottomOf="@id/rb_total_rating_review"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:layout_marginTop="@dimen/_5sdp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
